Remove unused imports and minor cleanups