@@ -66,10 +66,10 @@ class StringsTest {
         assertEquals("%1;1;1$",
             Strings.formatAsList(testStrings, "%", ";", "$", String::length));
 
-        testStrings = Arrays.asList("a");
+        testStrings = List.of("a");
         assertEquals("%a$", Strings.formatAsList(testStrings, "%", ";", "$"));
 
-        testStrings = Arrays.asList(new String[] {});
+        testStrings = List.of();
         assertEquals("%$", Strings.formatAsList(testStrings, "%", ";", "$"));
     }
 }
